hphp/test/slow/class_constant/abstract_const5.php.expectf

Fatal error: Couldn't find constant I::X in %stest/slow/class_constant/abstract_const5.php on line 10
